# libigl-example-mex

./: .gitignore  CMakeLists.txt  README.md  example.m
